--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-fdu hnujlk hnfr
+<h1>BRYSSA</h1>
+<P>Bryssa Avina</p>
+<h2>Desription</h2>
+<p> hi I am a student in Mar Vista High School:))</p>
+<a href=https://github.com/bryssaa/bryssaa.github.io/blob/master/index.html>
+  click me!</a>
