--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<HTML>
+<head>
+  <style>
+   h1 {
+     color:blue;
+   }
+  </style>
 <h1>BRYSSA</h1>
 <P>Bryssa Avina</p>
 <br/>
@@ -22,3 +29,4 @@
 <table>
   <tr>
     <th> movies </th>
+</HTML>
