--- a/index.html
+++ b/index.html
@@ -1,20 +1,39 @@
-<HTML>
+<HTML class="page">
 <head>
   <style>
    h1 {
      color:blue;
    }
+   .student {
+     color: pink;
+   }
+   #bryssa {
+     color: orange;
+     background-color: purple;
+   }
+   .sandwiches {
+     font-size:50px;
+   }
+   .dog {
+     font-weight: bolder;
+   }
+   .page {
+     background-color:gray;
+   }
+
   </style>
+<div class="sandwiches">
 <h1>BRYSSA</h1>
-<P>Bryssa Avina</p>
+<P id="Bryssa">Bryssa Avina</p>
+</div>
 <br/>
 <br/>
 <h2>Desription</h2>
-<p> hi I am a student in Mar Vista High School:))</p>
+<p class="student"> hi I am a <span class="dog"> Student</span> in Mar Vista High School:))</p>
 <a href=https://github.com/bryssaa/bryssaa.github.io/blob/master/index.html>
   <button>click me!</button></a>
 <br/>
-<button>Click Me!</button>
+<button class="student">Click Me!</button>
 <br/>
 <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/cute-dog-quotes-1517505601.jpg?crop=1.00xw:0.749xh;0,0.160xh&resize=480:*"/>
 <br/>
