--- a/index.html
+++ b/index.html
@@ -20,5 +20,15 @@
           as an undecided major</p>
       </div>
     </div>
+    <div class="container">
+      <div class="row">
+        <div class="col text-center">
+          <h2>Class projects</h2>
+      </div>
+      <div class="col text-center">
+        <h2>Experience</h2>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
