--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
     <div class="container">
       <div class="row">
         <div class="col text-center">
-          <h2>Class projects</h2>
-      </div>
-      <div class="col text-center">
+          <h2>Class Projects</h2>
+          <div class= "card">
+            <div class="card-body">
+              <h5 class="card-title"> Poseidon</h5>
+               <p class= "card-text"> A solution to Imperial Beach's water pollution.</p>
+            </div>
+          </div>
+         </div>
+         <div class="col text-center">
         <h2>Experience</h2>
         </div>
       </div>
