--- a/index.html
+++ b/index.html
@@ -33,7 +33,19 @@
          </div>
          <div class="col text-center">
         <h2>Experience</h2>
+        <div class="card">
+          <div class="card-body"
+            <h5 class="card-title"> Project Research<h5>
+            <p class="card-text"> My peers and I are trying to contribute into redusing water pollution.</p>
+          </div>
         </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class= "card-title"> Water Data</h5>
+            <p class="card text"> Chemical and pH Balance of water.</p>
+          </div>
+        </div>
+       </div>
       </div>
     </div>
   </body>
